bugfix: add z-index to title to show up on hover

--- a/app/assets/stylesheets/chatrooms.scss
+++ b/app/assets/stylesheets/chatrooms.scss
@@ -59,6 +59,7 @@
   .chatroom-title-label{
     display: block;
     -webkit-animation: fadeIn 0.7s;
+    z-index: 100;
   }
 }
 
